syntax = "proto3";

package com.tanja.user_service;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}

  rpc GetUser (GetUserRequest) returns (UserResponse) {}

  rpc EditUser (EditUserRequest) returns (UserResponse) {}

  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}

}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}


message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password =5;
  string role = 6;
}


message EditUserRequest {
  string id = 1;
  optional  string firstName = 2;
  optional  string lastName = 3;
  optional  string email = 4;
  optional  string password = 5;
  optional  string role = 6;
}


message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}



